# menopause-multimodal-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: export_metrics.py  run_evaluation.py  run_ingestion.py
src/app/: main.py
src/app/components/: sidebar.py
src/app/data/: common_data.py
src/app/pages/: chatbot.py  educational_cards.py  pdf_report.py  symptom_tracker.py
src/app/styles/: css_styles.py
src/config/: settings.py
src/evaluation/: ragas_eval.py
src/generation/: classifier.py  generator.py  prompts.py
src/ingestion/: captioner.py  chunker.py  parser.py  pipeline.py  scraper.py
src/retrieval/: bm25_index.py  embeddings.py  hybrid.py  repacker.py  reranker.py  vectorstore.py
src/utils/: helpers.py  logging.py
tests/: conftest.py  test_generation.py  test_ingestion.py  test_retrieval.py
