[tool.poetry]
name = "mrag-menopause"
version = "1.0.0"
description = "Multimodal RAG Framework for Menopause Health Information"
authors = ["Sara El-Ateif", "Soufiane Elassri"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.scripts]
menoguide = "src.app.main:run"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core ML & NLP
torch = ">=2.10.0"
transformers = ">=4.50.0"
accelerate = ">=1.5.0"
sentence-transformers = ">=5.3.0"
tiktoken = ">=0.9.0"
rank-bm25 = ">=0.2.2"
scikit-learn = ">=1.6.0"

# LangChain ecosystem
langchain = ">=1.2.0"
langchain-community = ">=0.4.0"
langchain-chroma = ">=1.1.0"
langchain-google-genai = ">=4.2.0"
langchain-huggingface = ">=1.2.0"

# Vector store
chromadb = ">=1.5.0"

# Google Gemini
google-genai = ">=1.67.0"

# Document processing
unstructured = {version = ">=0.16.0", extras = ["pdf"]}
pdfminer-six = ">=20240706"
pdf2image = ">=1.17.0"
pi-heif = ">=0.21.0"
unstructured-inference = ">=0.8.0"
unstructured-pytesseract = ">=0.3.0"
pillow = ">=11.0.0"
python-magic-bin = {version = ">=0.4.14", markers = "sys_platform == 'win32'"}
python-magic = {version = ">=0.4.27", markers = "sys_platform != 'win32'"}

# Web scraping
selenium = ">=4.28.0"
requests = ">=2.32.0"

# Configuration & logging
pydantic = ">=2.11.0"
pydantic-settings = ">=2.13.0"
python-dotenv = ">=1.1.0"
structlog = ">=25.5.0"

# Web framework
streamlit = ">=1.55.0"

# Data & visualization
numpy = ">=2.2.0"
pandas = ">=2.3.0"
plotly = ">=6.1.0"
matplotlib = ">=3.10.0"

# PDF report generation
fpdf2 = ">=2.8.0"
reportlab = ">=4.4.0"

# Progress tracking
tqdm = ">=4.67.0"

# HuggingFace
hf-xet = ">=1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=1.0.0"
pytest-cov = ">=6.1.0"
ruff = ">=0.11.0"
mypy = ">=1.16.0"
ipykernel = ">=6.29.0"

[tool.poetry.group.eval.dependencies]
ragas = ">=0.4.0"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
